--- a/oceanStream/config/packages/security.yaml
+++ b/oceanStream/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: app_home
+                target: home
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
